# boc

./: .credentials.json  .gitignore  20ng.py  README.md  cranfield.py  figures.py  pyproject.toml  queries_performance.json  results.json  start.sh  tfidf.ipynb  tfidf.py
data/: figures.json
data/figures/: all.xml  qry.xml  trec.txt
data/movies/: all.xml  qry.xml
data/movies2/: all.xml  trec.txt
terraform/environments/production/: main.tf  terraform.tfstate  terraform.tfstate.backup
terraform/environments/production/.terraform/modules/: modules.json
terraform/main/: server.tf
